illegible text on dark fix

--- a/Helium/gtk-4.0/_tauos.scss
+++ b/Helium/gtk-4.0/_tauos.scss
@@ -348,6 +348,7 @@ $colors: (
 
 .toast-box {
   background: if($variant == "light", gtkalpha(#2d2d2d, 0.5), gtkalpha(#f0f0f2, 0.75));
+  color: if($variant == "light", #f0f0f2, #2d2d2d);
   padding: 10px 20px;
   border-radius: 9999px;
 }
